Fix tooltip bug, truncate componentName to use ellipsis

--- a/src/EventTooltip.css
+++ b/src/EventTooltip.css
@@ -23,7 +23,6 @@
   padding-top: 5px;
   grid-gap: 2px 5px;
   grid-template-columns: min-content auto;
-  word-break: break-word;
 }
 
 .DetailsGridLabel {
@@ -32,11 +31,11 @@
   white-space: nowrap;
 }
 
-.Duration {
-}
-
 .ComponentName {
   font-weight: bold;
+  white-space: nowrap;
+  overflow: hidden;
+  text-overflow: ellipsis;
 }
 
 .ComponentStack {
